objects/CA_Comm_Question__c.object
<CustomObject>
    <fields>
        <fullName>CA_Comm__c</fullName>
        <label>CA Comm</label>
        <referenceTo>CA_Communication__c</referenceTo>
        <relationshipLabel>CA Comm Questions</relationshipLabel>
        <relationshipName>CA_Comm_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count_of_Response_Option_10__c</fullName>
        <label>Count of Response Option 10</label>
        <summaryFilterItems>
            <field>CA_Comm_Response__c.Response_Option_No__c</field>
            <operation>equals</operation>
            <value>10</value>
        </summaryFilterItems>
        <summaryForeignKey>CA_Comm_Response__c.Question_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Response_Option_11__c</fullName>
        <label>Count of Response Option 11</label>
        <summaryFilterItems>
            <field>CA_Comm_Response__c.Response_Option_No__c</field>
            <operation>equals</operation>
            <value>11</value>
        </summaryFilterItems>
        <summaryForeignKey>CA_Comm_Response__c.Question_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Response_Option_12__c</fullName>
        <label>Count of Response Option 12</label>
        <summaryFilterItems>
            <field>CA_Comm_Response__c.Response_Option_No__c</field>
            <operation>equals</operation>
            <value>12</value>
        </summaryFilterItems>
        <summaryForeignKey>CA_Comm_Response__c.Question_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Responses__c</fullName>
        <label>Count of Responses</label>
        <summaryForeignKey>CA_Comm_Response__c.Question_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Default_Text__c</fullName>
        <inlineHelpText>Default text can be added here for text box</inlineHelpText>
        <label>Default Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_255_chars__c</fullName>
        <label>Question (255 chars)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Select (Radio buttons)</fullName>
                </value>
                <value>
                    <fullName>Multi Select (Check boxes)</fullName>
                </value>
                <value>
                    <fullName>Free Text (Multi line text box)</fullName>
                </value>
                <value>
                    <fullName>Date Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Option_10__c</fullName>
        <label>Response Option 10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Option_11__c</fullName>
        <label>Response Option 11</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Option_12__c</fullName>
        <label>Response Option 12</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CA Comm Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q{00000}</displayFormat>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Comm Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>